<resources>
    <string name="app_name">Level Cam</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kompassi">Kompassi kuvaus</string>
    <string name="headingStart">Heading: 0.0</string>
    <string name="toggleLight">Light</string>
    <string name="toggleCompass">Compass</string>
    <string name="CompOn">Compass on</string>
    <string name="CompOff">Compass off</string>
    <string name="lightOn">Light on</string>
    <string name="lightOff">Light off</string>
</resources>
